Fix about the founder layout on small mobile screen

--- a/styles.css
+++ b/styles.css
@@ -667,7 +667,7 @@ footer {
   }
   
   .meet-the-founder {
-    height: 100vh;
+    height: 90vh;
     padding: 0;
   }
   
@@ -691,17 +691,18 @@ footer {
   }
   
   .meet-the-founder article img {
-    margin: 0 4.8rem;
+    margin: 0 0 1.2rem 4.8rem;
     position: static;
     width: 60%;
     height: 40%;
   }
   
   .learn-more {
-    margin-left: 6rem;
-    position: static;
+    margin-top: 10rem;
+    margin-left: 7rem;
     padding: 1rem;
     font-size: larger;
+    position: static;
     border-radius: 7px;
   }
 
@@ -765,21 +766,21 @@ footer {
   }
 
   .about-left {
-    display: flex;
+    display: block;
     gap: 3rem;
   }
 
   .image-of-self {
     margin-top: 2rem;
-    width: 31.5%;
-    height: 45%;
+    width: 75%;
+    height: 30%;
   }
 
   .about-founder {
     display: flex;
     flex-direction: column;
     font-size: 1.5rem;
-    width: 60%;
+    width: 100%;
     margin-bottom: 3.5rem;
   }
 
